# matchbox

./: .gitignore  .opf.yml  .travis.yml  ABOUT.md  CMakeLists.txt  CNAME  INSTALL.md  README.md  Vagrantfile  index.html  sonar-project.properties
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id
DPQA_Compare/: CMakeLists.txt
DPQA_ExtractFeatures/: CMakeLists.txt
DPQA_Train/: CMakeLists.txt
DPQAlib/: CMakeLists.txt
Python/: FindDuplicates.py
provision/: bootstrap.sh
